--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -38,11 +38,11 @@ header {
   
 }
 .menu {
-    
     display: flex;
     list-style-type: none;
     padding: 0;
     margin: 0;
+    gap: 17px;
     &__link {
         padding: 14px 20px;
         display: flex;
