--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -1,4 +1,5 @@
 .contacts {
+    padding: 50px 0 97px;
     &__text {
         margin: 24px 0 48px;
         max-width: 725px;
@@ -8,4 +9,46 @@
         justify-content: flex-start;
         gap: 76px;
     }
+    &__tabs {
+        margin-top: 48px;
+        border-radius: 5px;
+        background: #fff;
+        &__caption {
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 140%;
+            color: #999faa;
+            margin: 0;
+            list-style-type: none;
+            display: flex;
+            justify-content: space-between;
+            padding: 24px 40px 0;
+            li {
+                cursor: pointer;
+                transition: color .3s;
+                padding-bottom: 24px;
+                &:hover {
+                    color: #029fd2;
+                }
+                &.active {
+                    color: #029fd2;
+                    border-bottom: 2px solid #029fd2;;
+                }
+            }
+            span {
+                display: block;
+                font-weight: 500;
+            }
+        }
+    }
+    &__tabs__content {
+        display: none; /* по умолчанию прячем все блоки */
+      }
+    &__tabs__content.active {
+        display: block; /* по умолчанию показываем нужный блок */
+      }
+}
+#map, #map2, #map3 {
+    width: 100%;
+    height: 519px;
 }
