--- a/scss/style.scss
+++ b/scss/style.scss
@@ -141,6 +141,9 @@ body {
 .lh_144 {
     line-height: 144%;
 }
+.lh_171 {
+    line-height: 171%;
+}
 .lh_200 {
     line-height: 200%;
 }
@@ -223,3 +226,4 @@ body {
 @import '_rew.scss';
 @import '_cases.scss';
 @import '_contacts.scss';
+@import '_footer.scss';
