--- a/scss/_steps.scss
+++ b/scss/_steps.scss
@@ -1,5 +1,5 @@
 .steps {
-    padding: 80px 040px;
+    padding: 80px 0 40px;
     &__wrapper {
         display: flex;
         justify-content: space-between;
