--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,6 +97,10 @@ body {
     line-height: normal;
     margin: 0;
 }
+.fs_14 {
+    font-size: 14px;
+    margin: 0;
+}
 .fs_16 {
     font-size: 16px;
     margin: 0;
@@ -149,6 +153,9 @@ body {
 }
 
 //margins 
+.mb_4 {
+    margin-bottom: 4px;
+}
 .mb_9 {
     margin-bottom: 9px;
 }
