--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -1,13 +1,22 @@
 .contacts {
-    padding: 50px 0 97px;
+    padding: 57px 0 90px;
     &__text {
         margin: 24px 0 48px;
         max-width: 725px;
+        font-size: 20px;
+        line-height: 140%;
+
     }
     &__wrapper {
         display: flex;
         justify-content: flex-start;
         gap: 76px;
+    }
+    .header__phones {
+        a {
+            font-size: 24px;
+            line-height: normal;
+        }
     }
     &__tabs {
         margin-top: 48px;
