--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: #1c1f27;
-    padding: 80px 0 32px;
+    padding: 70px 0 32px;
     color: #fff;
 }
 .footer {
@@ -16,6 +16,7 @@ footer {
         font-size: 16px;
         text-transform: uppercase;
         color: #f1f4f7;
+        padding-top: 10px;
     }
     &__menu {
         padding: 0;
@@ -44,12 +45,12 @@ footer {
     &__subscribe {
         border: 2px solid #029fd2;
         border-radius: 5px;
-        padding: 24px 24px 31px;
+        padding: 24px 24px 26px;
         color: #fff;
         max-width: 362px;
         &__form {
             display: grid;
-            grid-template-columns: 3fr 2fr;
+            grid-template-columns: 4fr 3fr;
             gap: 13px;
             margin-top: 24px;
             .form__input {
@@ -57,6 +58,7 @@ footer {
                 font-size: 12px;
                 box-shadow: none;
                 border: none;
+                padding-left: 12px;
             }
             .btn_main {
                 font-size: 12px;
@@ -119,6 +121,7 @@ footer {
         padding-top: 24px;
         p {
             max-width: 250px;
+            margin: 0;
         }
     }
 }
