--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -23,10 +23,11 @@
         font-size: 18px;
         line-height: 144%;
         flex-grow: 1;
-        margin: 0;
+        margin: 5px 0 0 0;
         padding: 0;
         list-style-type: none;
-        margin-bottom: 22px;
+        margin-bottom: 18px;
+        padding-right: 7px;
         &__item {
             margin-bottom: 9px;
             display: flex;
