--- a/scss/_cases.scss
+++ b/scss/_cases.scss
@@ -19,6 +19,7 @@
                 width: 100%;
                 height: 207px;
                 object-fit: contain;
+                border-radius: 6px;
             }
         }
         &__table {
