--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -173,6 +173,10 @@
     .container {
         width: 100%;
         padding: 0 16px;
+        &_pr0 {
+            padding-right: 0;
+            overflow: hidden;
+        }
     }
     .title {
         font-size: 20px;
@@ -364,9 +368,12 @@
                 height: auto;
             };
         }
+        &__wrapper {
+            grid-template-columns: 1fr;
+        }
     }
     .about {
-        padding: 20px 0;
+        padding: 20px 0 40px;
         &__title {
             font-size: 28px;
             margin-bottom: 16px;
@@ -406,10 +413,17 @@
             .slick-arrow {
                 width: 24px;
                 height: 24px;
+                top: 44%;
                 &::after {
                     width: 6px;
                     height: 10px;
                 }
+            }
+            .slick-next {
+                right: 12px;
+            }
+            .slick-prev {
+                left: 12px;
             }
             &__counter {
                 font-size: 12px;
@@ -420,13 +434,193 @@
         }
     }
     .video {
+        padding: 40px 0 32px;
         &__container {
             padding: 0;
         }
         &__slider {
-            .slick-list {
-                padding: 0;
+            margin-top: 20px;
+            .slick-list{
+                padding:0 15% 0 8px;
             }
+            .slick-slide {
+                margin: 0;
+                padding: 0 16px 0 0;
+            }
+        }
+        &__text {
+            font-size: 14px;
+            margin-top: 12px;
+        }
+    }
+    .rew {
+        padding: 40px 0 20px;
+        &__wrap {
+            background-color: transparent;
+            padding: 0;
+        }
+        &__text {
+            font-size: 12px;
+            line-height: normal;
+        }
+        &__slider {
+            margin-top: 20px;
+            .slick-list{
+                padding:0 15% 0 24px;
+            }
+            .slick-slide {
+                margin: 0 4px;
+            }
+        }
+    }
+    .cases {
+        padding: 20px 0;
+        &__wrapper {
+            margin: 20px 0 24px;
+        }
+        &__title {
+            padding: 16px 24px;
+            font-size: 16px;
+        }
+        &__content {
+            padding: 20px;
+        }
+        &__item {
+            &__wrapper {
+                padding: 0 4px;
+                gap: 11px;
+                img {
+                    height: 106px;
+                }
+            }
+            &__table {
+                margin-top: 20px;
+                &__row {
+                    font-size: 14px;
+                    display: flex;
+                    gap: 8px;
+                    height: 40px;
+                }
+            }
+        }
+
+    }
+    .contacts {
+        padding: 20px 0 60px;
+        &__text {
+            margin: 20px 0;
+            font-size: 14px;
+            line-height: normal;
+        }
+        &__wrapper {
+            padding-bottom: 16px;
+        }
+        .header__phones {
+            a {
+                font-size: 24px;
+            }
+            .fs_24 {
+                font-size: 24px;
+            }
+        }
+        &__mobile {
+            display: block;
+            color: inherit;
+            text-decoration: none;
+            font-size: 20px;
+            line-height: 140%;
+            margin-top: 24px;
+            span {
+                display: block;
+                font-weight: 500;
+            }
+        }
+        .mobile {
+            .btn_main {
+                margin-top: 16px;
+            }
+        }
+    }
+    footer {
+        .container {
+            padding: 0;
+        }
+        .soc {
+            &__item {
+                width: 24px;
+                height: 24px;
+            }
+        }
+    }
+    .footer {
+        
+        &__wrapper {
+            flex-direction: column;
+            gap: 0;
+            border-bottom: none;
+            padding-bottom: 24px;
+        }
+        &__title {
+            margin-bottom: 12px;
+            padding: 16px;
+            border-bottom: 1px solid rgba(255,255,255,.1);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 0;
+            &::after {
+                content: '';
+                display: block;
+                width: 14px;
+                height: 7px;
+                background: url(../img/icons/arrow-down.svg) no-repeat center;
+            }
+        }
+        &__menu {
+            padding: 0 16px;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height .3s;
+            &-serv {
+                columns: 1;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 8px;
+                li {
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                }
+            }
+            &_active {
+                max-height: 1000px;
+            }
+        }
+        &__subscribe {
+            margin: 32px 16px 0;
+            max-width: 100%;
+        }
+        &__logo {
+            display: none;
+        }
+        &__bottom {
+            padding: 0 16px 24px;
+            border-bottom: none;
+            &__wrapper {
+                justify-content: space-between;
+                width: 100%;
+            }
+            .fs_16 {
+                font-size: 14px;
+            }
+            &__links {
+                margin-left: 0;
+                a {
+                    line-height: 200%;
+                }
+            }
+        }
+        &__copyright {
+            padding: 0 16px;
         }
     }
 }
