--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,14 @@ body {
     background-color: #f1f4f7;
     margin: 0;
 }
+a[x-apple-data-detectors] {
+    color: inherit !important;
+    text-decoration: none !important;
+    font-size: inherit !important;
+    font-family: inherit !important;
+    font-weight: inherit !important;
+    line-height: inherit !important;
+}
 .logo {
     img {
         max-width: 100%;
