--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -28,6 +28,7 @@
         line-height: 100%;
         width: 100%;
         padding-left: 36px;
+        font-size: 16px;
     }
     &__label {
         position: relative;
@@ -94,15 +95,24 @@
         font-size: 14px;
         line-height: 143%;
         color: #428bca;
-        
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        &-item {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+            justify-content: space-between;
+            width: 84%;
+        }
         &-remove {
-            
+            background: url(../img/icons/close.svg) no-repeat center/contain;
+            width: 12px;
+            height: 12px;
         }
     }
     
