--- a/scss/_promo.scss
+++ b/scss/_promo.scss
@@ -40,7 +40,7 @@
                 display: block;
                 width: 23px;
                 height: 17px;
-                background: url(img/icons/red-check.svg) no-repeat center/contain;
+                background: url(../img/icons/red-check.svg) no-repeat center/contain;
             }
         }
     }
