--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -6,6 +6,7 @@
         padding: 48px 136px 51px 92px;
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
         background-color: #fff;
     }
     &__form {
