--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -180,9 +180,6 @@
     }
 }
 @media screen and (max-width:767px) {
-    header {
-        display: none;
-    }
     .container {
         width: 100%;
         padding: 0 16px;
@@ -207,6 +204,164 @@
             a {
                 font-size: 12px;
             }
+        }
+    }
+    .hamburger {
+        width: 22px;
+        height: 18px;
+        display: block;
+        border: none;
+        background: url(../img/icons/hamburger.svg) no-repeat center/contain;
+    }
+    .header {
+        &__wrapper {
+            .header {
+                &__phones {
+                    position: fixed;
+                    top: 0;
+                    right: -100%;
+                    width: 84%;
+                    height: 100%;
+                    background-color: #fff;
+                    transition: right .3s;
+                    z-index: 10;
+                    &_active {
+                        right: 0;
+                    }
+                    .header__menu__wrapper__head {
+                        margin-bottom: 47px;
+                        .logo {
+                            margin-left: 32px;
+                            margin-right: 0;
+                        }
+                    }
+                    .btn_main {
+                        margin: 32px 22px;
+                        height: 40px;
+                    }
+                    span {
+                        font-weight: 500;
+                        font-size: 12px;
+                        color: #999faa;
+                        display: block;
+                        margin: 0 22px 4px;
+                    }
+                    &__icon {
+                        width: 20px;
+                        height: 20px;
+                        border: none;
+                        text-decoration: none;
+                        display: block;
+                        background: url(../img/icons/phone-icon.svg) no-repeat center/contain;
+                    }
+                    .phones__close {
+                        width: 18px;
+                        height: 18px;
+                        display: block;
+                        background: url(../img/icons/close-menu.svg) no-repeat center/contain;
+                        border: none;
+                        text-decoration: none;
+                    }
+                }
+                &__phone {
+                    font-weight: 500;
+                    font-size: 19px;
+                    line-height: 147%;
+                    color: #000;
+                    margin: 0 22px 24px;
+                }
+               
+            }
+        }
+        &__menu {
+            &__wrapper {
+                z-index: 10;
+                position: fixed;
+                background-color: #fff;
+                top: 0;
+                left: -100%;
+                flex-direction: column;
+                justify-content: flex-start;
+                width: 84%;
+                height: 100%;
+                transition: left .3s;
+                &_active {
+                    left: 0;
+                }
+                &__head {
+                    padding: 14px 22px;
+                    border-bottom: 1px solid rgba(51, 51, 51, .1);
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    .logo {
+                        width: 148px;
+                        margin-right: 55px;
+                        img {
+                            max-width: 100%;
+                            display: block;
+                        }
+                    }
+                }
+
+                .download {
+                    display: flex;
+                    justify-content: center;
+                    height: 40px;
+                    margin: 22px 22px 16px;
+                }
+                .btn_main {
+                    margin: 0 22px 16px;
+                }
+            }
+        }
+        
+    }
+    .menu {
+        flex-direction: column;
+        &__link {
+            font-weight: 500;
+            font-size: 16px;
+            text-transform: uppercase;
+            color: #333;
+            border-bottom: 1px solid rgba(51, 51, 51, .1);
+            padding: 16px 22px;
+            justify-content: space-between;
+            &::after {
+                content: '';
+                height: 14px;
+                width: 7px;
+                background-color: #000; 
+                display: block;
+                mask: url(../img/icons/arrow-right.svg) no-repeat center/contain;
+            }
+        }
+        &__close {
+            width: 18px;
+            height: 18px;
+            display: block;
+            background: url(../img/icons/close-menu.svg) no-repeat center/contain;
+            border: none;
+            text-decoration: none;
+        }
+    }
+    .live {
+        justify-content: flex-start;
+        font-size: 16px;
+        background-color: #fff;
+        color: #e84039;
+        border-bottom: 1px solid rgba(51, 51, 51, .1);
+        &::before {
+            background-color: #e84039;
+        }
+        &::after {
+            content: '';
+            height: 14px;
+            width: 7px;
+            background-color: #000; 
+            display: block;
+            mask: url(../img/icons/arrow-right.svg) no-repeat center/contain;
+            margin-left: auto;
         }
     }
     .promo {
