--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -37,6 +37,7 @@ footer {
         }
         &-serv {
             columns: 2;
+            margin-right: -174px;
             li {
                 margin-right: 36px;
             }
