--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -68,6 +68,9 @@
     &:hover {
         border-color: #029fd2;
         color: #029fd2;
+        p {
+            color: #029fd2;
+        }
     }
     p {
         margin: 0;
