add position burger

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -207,11 +207,13 @@
         }
     }
     .hamburger {
-        width: 22px;
-        height: 18px;
+        width: 40px;
+        height: 40px;
         display: block;
         border: none;
-        background: url(../img/icons/hamburger.svg) no-repeat center/contain;
+        background: url(../img/icons/hamburger.svg) no-repeat center/22px 18px;
+        padding: 0;
+        margin-left: -4px;
     }
     .header {
         &__wrapper {
@@ -248,12 +250,13 @@
                         margin: 0 22px 4px;
                     }
                     &__icon {
-                        width: 20px;
-                        height: 20px;
+                        width: 40px;
+                        height: 40px;
                         border: none;
                         text-decoration: none;
                         display: block;
-                        background: url(../img/icons/phone-icon.svg) no-repeat center/contain;
+                        background: url(../img/icons/phone-icon.svg) no-repeat center/20px 20px;
+                        margin-right: -4px;
                     }
                     .phones__close {
                         width: 18px;
