--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@
 }
 
 body {
-    font-family: "DIN Pro", 'Arial', sans-serif;
+    font-family: "DIN Pro", 'ui-sans-serif, system-ui', sans-serif;
     color: #333;
     background-color: #f1f4f7;
     margin: 0;
