--- a/scss/_promo.scss
+++ b/scss/_promo.scss
@@ -18,6 +18,7 @@
     }
     &__title {
         font-weight: 700;
+        font-style: bold;
         font-size: 40px;
         margin: 0 0 32px;
     }
